attempting to fix side-scrolling issue on mobile

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6880,6 +6880,7 @@ button.close {
 @media (max-width:992px) {
   #header-border {
     border-right:none;
+    border-right:0;
     height:100%;
   }
   .masthead {
